# drf-openapi-tester

./: .black  .codecov.yml  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  CONTRIBUTING.rst  CONTRIBUTORS.rst  LICENSE  README.md  README.rst  example_fetched_spec.json  manage.py  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  sonar-project.properties  test.py
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: codecov.yml  publish.yml  publish_pypi.yml  publish_test_pypi.yml  testing.yml
_temp/: test_create_dict_from_schema.py
_temp/schema_tester_tests/: test_dict.py  test_init.py  test_item.py
_temp/utils_tests/: test_route.py
_temp/validate_response_tests/: test_django_test_case.py  test_static.py
demo/: settings.py  tests.py  urls.py  views.py  wsgi.py
demo/api/: serializers.py
demo/static_schemas/: openapi-schema-split-apis.yaml  openapi-schema-split-datastructures.yaml  openapi-schema-split.yaml  openapi-schema.json  openapi-schema.yml
demo_project/: asgi.py  openapi-schema.yml  settings.py  tests.py  urls.py  wsgi.py
demo_project/api/: serializers.py
demo_projects/drf_yasg_demo/: manage.py  tests.py
django_openapi_response_tester/: __init__.py  apps.py  case_testers.py  configuration.py  loaders.py  openapi.py  schema_tester.py  testing.py  types.py  utils.py
django_swagger_tester/: __init__.py  apps.py  case_checks.py  case_testers.py  configuration.py  drf_yasg.py  exceptions.py  loaders.py  middleware.py  models.py  openapi.py  schema_loaders.py  schema_tester.py  selectors.py  static.py  testing.py  types.py  utils.py  validate_response.py  validation.py  views.py  wrapper.py
django_swagger_tester/case/: base.py  checks.py  utils.py
django_swagger_tester/drf_spectacular/: __init__.py  loader.py
django_swagger_tester/drf_yasg/: __init__.py  base.py  load_schema.py  loader.py
django_swagger_tester/dynamic/: get_schema.py
django_swagger_tester/input_validation/: utils.py  validation.py
django_swagger_tester/migrations/: 0001_initial.py  0002_auto_20200925_1145.py
django_swagger_tester/response_validation/: __init__.py  base.py  drf_yasg.py  response_tester.py  static_schema.py  utils.py  validation.py
django_swagger_tester/schema_validation/: __init__.py  case.py  error.py  openapi.py  schema_tester.py  utils.py
django_swagger_tester/static/: get_schema.py  parse.py
django_swagger_tester/static_schema/: __init__.py  base.py  load_schema.py  loader.py
django_swagger_tester/validate_response/: validate_response.py
django_swagger_tester/validate_responses/: __init__.py  drf_yasg.py  static.py
docs/: PYPI_README.rst  README.md  SUMMARY.md  conf.py  configuration.rst  i18n.md  i18n.rst  implementation.rst  index.rst  installation.rst  publish.rst  supported_implementations.rst  testing_with_django_swagger_tester.rst  troubleshooting.rst  user_guide.md
docs/components/: configuration.rst  installation.rst  readme_html_header.rst  readme_intro_text.rst  readme_rst_header.rst  supported_implementations.rst  table_of_contents.rst
docs/pypi/: OLD_README.rst  README.rst
docs/readthedocs/: configuration.rst  index.rst  installation.rst  publish.rst  supported_implementations.rst
openapi_tester/: __init__.py  apps.py  base.py  case.py  case_check.py  case_checks.py  case_testers.py  client.py  clients.py  config.py  configuration.py  constants.py  exceptions.py  fetch_spec.py  get_spec.py  initialize.py  loaders.py  openapi.py  openapi_tester.py  parse.py  route.py  schema_converter.py  schema_tester.py  settings.py  tester.py  testing.py  type_declarations.py  utils.py  validate_response.py  validators.py
openapi_tester/drf_yasg/: get_schema.py
openapi_tester/dynamic/: get_schema.py
openapi_tester/static/: get_schema.py  parse.py
requirements/: requirements-dev.txt  requirements-test-base.txt
response_tester/: __init__.py  apps.py  case_testers.py  configuration.py  exceptions.py  loaders.py  openapi.py  route.py  schema_tester.py  testing.py  type_declarations.py  types.py  utils.py
test_project/: asgi.py  models.py  settings.py  tests.py  urls.py  views.py  wsgi.py
test_project/api/: serializers.py
test_project/migrations/: 0001_initial.py  0002_names_name.py
test_projects/drf_yasg_test/: manage.py
tests/: __init__.py  conftest.py  requirements-test-base.txt  schema_converter.py  test_cache.py  test_case_validators.py  test_clients.py  test_configuration.py  test_correctly_documented_cars.py  test_django_framework.py  test_errors.py  test_exceptions.py  test_import.py  test_import_errors.py  test_loaders.py  test_openapi.py  test_schema_tester.py  test_test.py  test_test_case.py  test_test_schema_section.py  test_utils.py  test_validators.py  test_version.py  types.py  utils.py
tests/case_checks/: test_kebab.py  test_schema_case_tester.py
tests/case_validators_tests/: test_is_camel_case.py  test_is_kebab_case.py  test_is_pascal_case.py
tests/configuration_tests/: test_base_settings.py
tests/functional/: test_correctly_documented_cars.py  test_drf_yasg.py  test_drf_yasg_demo.py  test_drf_yasg_dynamic.py  test_dynamic_and_static_outputs_are_equal.py  test_generated_static_schema.py  test_ignored_case.py  utils.py
tests/input_validation/: test_input_validation.py
tests/rewrite/: test_response_case_tester.py  test_schema_case_tester.py
tests/schema_tester_tests/: __init__.py  test_init.py  test_item.py  test_list.py  test_openapi_key_words_handling.py  test_validate_response.py  test_validation_logic.py
tests/schemas/: any_of_one_of_test_schema.yaml  manual_reference_schema.json  manual_reference_schema.yaml  one_of_any_of_test_schema.yaml  openapi_v2_reference_schema.yaml  openapi_v3_reference_schema.yaml  reference_yasg_schema.json  reference_yasg_schema.yaml  spectactular_reference_schema.json  spectactular_reference_schema.yaml  test_project_schema.json  test_project_schema.yaml
tests/test_case/: test_response_case_tester.py  test_schema_case_tester.py
(+289 files in other folders)
