[tool.poetry]
name = "drf-openapi-tester"
version = "2.1.2"
description = "Test utility for validating OpenAPI response documentation"
authors = ["Sondre Lillebø Gundersen <sondrelg@live.no>", "Na'aman Hirschfeld <nhirschfeld@gmail.com>"]
maintainers = ["Na'aman Hirschfeld <nhirschfeld@gmail.com>"]
license = "BSD-4-Clause"
readme = "README.md"
homepage = "https://github.com/snok/drf-openapi-tester"
repository = "https://github.com/snok/drf-openapi-tester"
documentation = "https://github.com/snok/drf-openapi-tester"
keywords = ["openapi", "swagger", "api", "testing", "schema", "django", "drf"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Framework :: Django",
    'Framework :: Django :: 3.0',
    'Framework :: Django :: 3.1',
    'Framework :: Django :: 3.2',
    'Framework :: Django :: 4.0',
    "Framework :: Pytest",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Documentation",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: Unit",
    "Topic :: Utilities",
    "Typing :: Typed",
]
include = ["CHANGELOG.md"]
packages = [
    { include = "openapi_tester" },
]

[tool.poetry.dependencies]
python = "^3.7"
django = [
    { version = '^3', python = '<=3.7' },
    { version = '^3 || ^4', python = '>=3.8' },
]
djangorestframework = "<3.14.0"
inflection = "*"
openapi-spec-validator = ">=0.4"
prance = "*"
pyYAML = "*"

[tool.poetry.dev-dependencies]
coverage = { extras = ["toml"], version = "^6"}
drf-spectacular = "*"
drf-yasg = "*"
Faker = "*"
pre-commit = "*"
pylint = "*"
pytest = "*"
pytest-django = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 120
preview = true
quiet = true
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 120

[tool.pylint.FORMAT]
max-line-length = 120

[tool.pylint.MESSAGE_CONTROL]
disable = """
    unsubscriptable-object,
    unnecessary-pass,
    missing-function-docstring,
    import-outside-toplevel,
    fixme,
    line-too-long,
"""
enable = "useless-suppression"

[tool.pylint.DESIGN]
max-args = 6
max-returns = 21
max-branches = 20
max-locals = 20

[tool.pylint.BASIC]
good-names = "_,e,i"

[tool.coverage.run]
source = [
    "openapi_tester",
]
omit = [
    "manage.py",
    "test_project/*",
]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "raise NotImplementedError",
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "test_project.settings"
